--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                         {r.isOwner ? (
                                             <button onClick={(e) => deleteRoomPermanently(e, r.code)} className="text-red-500 hover:text-red-400 p-2 font-bold text-lg" title="Delete Room">🗑️</button>
                                         ) : (
-                                            <button onClick={(e) => removeFromHistory(e, r.code)} className="text-zinc-600 hover:text-white p-2" title="Remove from list">✕</button>
+                                            <button onClick={(e) => removeFromHistory(e, r.code)} className="text-zinc-600 hover:text-white p-2" title="Remove from list">🗑️</button>
                                         )}
                                     </div>
                                 ))}
