--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                          }}>
                         <div className="relative z-10">
                             <h1 className="text-5xl font-black f1-italic italic uppercase text-white drop-shadow-lg">{activeUser.name}</h1>
-                            <p className="text-[10px] font-bold uppercase tracking-[0.3em] mt-2 opacity-80">Driver Profile</p>
+                            <p className="text-[10px] font-bold uppercase tracking-[0.3em] mt-2 opacity-80">Listed Predictions</p>
                         </div>
                         <div className="text-center relative z-10">
                             <p className="text-[10px] font-bold uppercase mb-1 opacity-70">Accuracy</p>
